# veoffload-veorun

./: INSTALL  Makefile.am  README  autogen.sh  configure.ac  gen_veorun_static_symtable  mk_veorun_static  mk_veorun_static.in  veo_block.S  veo_private_defs.h  veorun.c  veorun.h  veorun.spec.in
debian/: Makefile.am  control.in  copyright  rules.in  veoffload-veorun-dev.install.in  veoffload-veorun.install.in
